--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <title>..:: place clothes ::..</title>
 </head>
 <body>
+    <!-- aula 24/04/2023 - HTML -->
+    <header id="header">
+        <a id="logo" href="index.html"><img src="./img/logo.jpg" alt="logo Place Clothes"></a>
+        <nav id="nav">
+            <button aria-label="abrir menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
+                <span id="hamburger"></span>
+            </button>
+            <ul id="menu" role="menu"
+                <li><a class="linkMenu" href="index.html">Home</a></li>
+                <li><a class="linkMenu" href="produtos.html">Produtos</a></li>
+                <li><a class="linkMenu" href="streaming.html">#Streaming</a></li>
+                <li><a class="linkMenu" href="contato.html">Contato</a></li>
+                <!-- Atalho para copiar conteudo > Alt + Shift + seta para baixo  -->
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
