--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">    
+    <link rel="stylesheet" type="text/css" href="./css/style.css">   
+    <link rel="stylesheet" type="text/css" href="./bootstrap/css/bootstrap.min.css">
     <title>..:: place clothes ::..</title>
 </head>
 <body>
     <!-- aula 24/04/2023 - HTML -->
+    <!-- inicio menu responsivo -->
     <header id="header">
         <a id="logo" href="index.html"><img src="./img/logo.jpg" alt="logo Place Clothes"></a>
         <nav id="nav">
@@ -24,6 +26,58 @@
             </ul>
         </nav>
     </header>
-    
+    <!-- fim menu responsivo -->  
+    <!-- inicio carousel página principal -->  
+    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="1600">
+                <img
+                src="./img/carousel_1.avif" 
+                class="d-block w-100"
+                alt="..."
+                />
+            </div>
+            <div class="carousel-item" data-bs-interval="1500">
+                <img
+                src="./img/carousel_2.jpg" 
+                class="d-block w-100"
+                alt="..."
+                />
+            </div>
+            <div class="carousel-item" data-bs-interval="1500">
+                <img
+                src="./img/carousel_3.webp" 
+                class="d-block w-100"
+                alt="..."
+                />
+            </div>
+        </div>
+        <!-- fim imagens carousel-->
+        <!-- inicio controle do carousel-->
+        <button 
+            class="carousel-control-prev"
+            data-bs-target="#carouselExampleInterval"
+            type="button"
+            data-bs-slide="prev"
+        >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+        </button>
+        <button 
+            class="carousel-control-next"
+            data-bs-target="#carouselExampleInterval"
+            type="button"
+            data-bs-slide="next"
+        >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+        </button>
+    </div>
+    <!-- fim do controle do carousel -->
+    <!-- fim do carousel -->
+
 </body>
+
+<script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
+
 </html>
