update 03/05/2023 - PRJ Place Space Rav.5

--- a/index.html
+++ b/index.html
@@ -75,9 +75,81 @@
     </div>
     <!-- fim do controle do carousel -->
     <!-- fim do carousel -->
+    <!-- Início Banner -->
+    <div class="section-banner-home">
+        <div class="container-fluid">
+            <div class="row m-0">
+                <div class="col-12 col-md-6">
+                    <figure>
+                        <img src="img/banner 1.jpg" alt="banner-home">
+                    </figure>
+                </div>
+                <div class="col-12 col-md-6">
+                    <section class="texto-banner d-none d-md-block">
+                        <h1>Venha conhecer o nosso novo lançamento!</h1>
+                        <p class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum id rem dicta corrupti quibusdam ea, animi maxime illo distinctio quasi aspernatur doloribus quam eligendi ipsa perferendis quisquam modi sequi eum.</p>
+                        <a href="produtos.html">Saiba mais</a>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Fim do Banner -->
+    <!-- Início Destaque -->
+    <div class="destaque">
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <!-- Início da tag section do texto destaque -->
+                <section class="col-12">
+                    <h2>Que tal conhecer nossas imagens capturadas no espaço?</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt laborum consequatur dignissimos ipsum ex suscipit nihil nemo ipsam voluptate corporis blanditiis, illum facilis expedita, quo dolorum nam voluptatibus veritatis nostrum.</p>
+                </section>
+                <!-- Fim da Tag section do texto destaque -->
+                <!-- Inicio da Imagem 1 -->
+            <div class="col-6 col-md-2 pr-0"> 
+                <figure>
+                    <a href="produtos.html"><img src="./img/img_destaque1.webp" alt="produto destaque" width="100%"></a>
+                    <figcaption>Vestido <br> 2023</figcaption>
+                </figure>
+            </div>
+            <!-- fim da imagem 1 -->
+                <!-- Inicio da Imagem 2 -->
+            <div class="col-6 col-md-2 pr-0"> 
+                <figure>
+                    <a href="produtos.html"><img src="./img/img_destaque2.webp" alt="produto destaque" width="100%"></a>
+                    <figcaption>Vestido <br> 2023</figcaption>
+                </figure>
+            </div>
+            <!-- fim da imagem 2 -->
+                <!-- Inicio da Imagem 3 -->
+            <div class="col-6 col-md-2 pr-0"> 
+                <figure>
+                    <a href="produtos.html"><img src="./img/img_destaque3.webp" alt="produto destaque" width="100%"></a>
+                    <figcaption>Vestido <br> 2023</figcaption>
+                </figure>
+            </div>
+            <!-- fim da imagem 3 -->
+                <!-- Inicio da Imagem 4 -->
+            <div class="col-6 col-md-2 pr-0"> 
+                <figure>
+                    <a href="produtos.html"><img src="./img/img_destaque4.webp" alt="produto destaque" width="100%"></a>
+                    <figcaption>Corse <br> 2023</figcaption>
+                </figure>
+            </div>
+            <!-- fim da imagem 4 -->  
+            <!-- inicio saiba mais -->
+            <div class="col-12">
+                <a href="#">Saiba Mais</a>
+            </div> 
+                        <!-- fim saiba mais -->
+            </div>
+        </div>
+    </div>
+    <!-- fim do destaque -->
+    
 
 </body>
 
-<script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
 
 </html>
