update prj placeclothes rev.7 > 08/05/2023

--- a/index.html
+++ b/index.html
@@ -156,6 +156,105 @@
         </div>
     </div>
     <!-- fim do destaque -->
+    <!-- inicio do texto novidades -->
+    <div class="novidades" id="novidades-mobile">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6">
+                    <section class="text-body">
+                        <h2>Conheça nossas novidades</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas harum ipsum omnis eum esse vel eos odio iusto assumenda illo eveniet corrupti perspiciatis tenetur perferendis quos facilis, corporis nostrum modi!</p>
+                        <a class="btn-banner" href="#" target="_blank">Saiba Mais</a>
+                    </section>
+                </div>
+                <!-- fim texto novidades -->
+                <!-- inicio imagem novidades -->
+                <div class="col-md-6">
+                    <figure>
+                        <img src="./img/novidade1.jpg" class="img-fluid" alt="banner-home">
+                    </figure>
+                </div>
+                <!-- fim imagem novidades -->
+            </div>
+        </div>
+    </div>
+    <!-- Alt + Shift + F > Corrige a identação do codigo >> Escolha << 2a opção >> Recursos da Linguagem HTML -->
+    <!--  inicio galeria -->
+    <div class="galeria d-flex align-itens-center">
+        <div class="container">
+            <div class="row">
+                <!-- inicio texto galerias -->
+                <div class="col-12">
+                    <section class="texto-galeria">
+                        <h2>Conheça nossa Galeria</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos rem est eos. Alias minima, eum quis similique sed quisquam consequatur inventore accusantium a. Ut repellendus id ipsa, eius ullam magni!</p>
+                    </section>
+                </div>
+                <!--  Fim texto galerias -->
+                <!-- inicio imagem 1 galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/galeria1.webp" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- fim imagem 1 galeria -->
+                <!-- inicio imagem 2 galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/galeria2.webp" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- fim imagem 2 galeria -->
+                <!-- inicio imagem 3 galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/galeria3.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- fim imagem 3 galeria -->
+                <!-- inicio imagem 4 galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/galeria4.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- fim imagem 4 galeria -->
+                <!-- inicio imagem 5 galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/galeria5.webp" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- fim imagem 5 galeria -->
+                <!-- inicio imagem 6 galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/galeria6.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- fim imagem 6 galeria -->
+                <!-- inicio imagem 7 galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/galeria7.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- fim imagem 7 galeria -->
+                <!-- inicio imagem 8 galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/galeria8.webp" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- fim imagem 8 galeria -->
+                <!-- inicio imagem 9 galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/galeria9.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- fim imagem 9 galeria -->
+                <!-- inicio imagem 10 galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/galeria10.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- fim imagem 10 galeria -->
+                <!-- inicio imagem 11 galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/galeria11.webp" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- fim imagem 11 galeria -->
+                <!-- inicio imagem 12 galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/galeria12.webp" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- fim imagem 12 galeria -->
+            </div>
+        </div>
+    </div>
+    <!-- fim galeria -->
     
 
 </body>
