--- a/index.html
+++ b/index.html
@@ -255,10 +255,58 @@
         </div>
     </div>
     <!-- fim galeria -->
+    <!-- Início Footer -->
+    <footer class="rodape">
+        <div class="container">
+            <div class="row m-0">
+                <!-- Início Logo -->
+                <div class="col-md-4">
+                    <figure>
+                        <img src="./img/logo rodape 1.avif" alt="logo_rodape">
+                    </figure>
+                </div>
+                <!-- Fim logo -->
+                <!-- Início texto rodape -->
+                <div class="col-md-4">
+                    <div class="info-contato">
+                        <p>E-mail:</p>
+                        <p>maria.ju201219@gmail.com</p><br>
+                        <p>Endereço:</p>
+                        <p>Avenida ABC, 124</p><br>
+                        <p>Telefone:</p>
+                        <p>+55 (15) 4002-8922</p>
+                    </div>
+                </div>
+                <!-- Fim texto rodape -->
+                <!-- Início das mídias sociais -->
+                <div class="col-md-4">
+                    <figure class="redes-sociais">
+                        <a href="#"><img src="./img/redes_sociais/face.png" alt=""></a>
+                        <a href="#"><img src="./img/redes_sociais/insta.png" alt=""></a>
+                        <a href="#"><img src="./img/redes_sociais/youtube.png" alt=""></a>
+                        <a href="#"><img src="./img/redes_sociais/linkedin.png" alt=""></a>
+                    </figure>
+                    <br>
+                    <a href="index.html">Home</a>
+                    <a href="produtos.html">Produtos</a>
+                    <a href="streaming.html">#Streaming</a>
+                    <a href="contato.html">Contato</a>
+                </div>
+                <!-- Fim das mídias sociais -->
+                <!-- Início dos Direitos Autorais -->
+                <div class="col-12">
+                    <p class="direitos">Direitos Autorais Reservado.</p>
+                </div>
+                <!-- Fim dos Direitos Autorais -->
+            </div>
+        </div>
+    </footer>
+    <!-- Fim Footer -->
     
 
 </body>
 
     <script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./js/menu.js" ></script>
 
 </html>
