--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         <p>E-mail:</p>
                         <p>maria.ju201219@gmail.com</p><br>
                         <p>Endereço:</p>
-                        <p>Avenida ABC, 124</p><br>
+                        <p>Avenida Brasil, Nº 123</p><br>
                         <p>Telefone:</p>
                         <p>+55 (15) 4002-8922</p>
                     </div>
@@ -281,8 +281,8 @@
                 <!-- Início das mídias sociais -->
                 <div class="col-md-4">
                     <figure class="redes-sociais">
-                        <a href="#"><img src="./img/redes_sociais/face.png" alt=""></a>
-                        <a href="#"><img src="./img/redes_sociais/insta.png" alt=""></a>
+                        <a href="https://instagram.com/juliahnicole5?igshid=OTk0YzhjMDVlZA=="><img src="./img/redes_sociais/face.png" alt=""></a>
+                        <a href="https://www.facebook.com/profile.php?id=100045455851332&mibextid=ZbWKwL"><img src="./img/redes_sociais/insta.png" alt=""></a>
                         <a href="#"><img src="./img/redes_sociais/youtube.png" alt=""></a>
                         <a href="#"><img src="./img/redes_sociais/linkedin.png" alt=""></a>
                     </figure>
