--- a/contato.html
+++ b/contato.html
@@ -41,23 +41,63 @@
                 <div class="col-md-6">
                     <div class="well well-sm">
                         <form class="form-horizontal" method="post" action="">
+                            <fieldset>
+                                <legend class="text-left header">Preencha suas informações:</legend>
+                                <div class="form-group">
                             <div class="col-md-10 col-md-offset-1">
-                                <input id="fname" name="name" type="text" aria-placeholder="Insira seu primeiro nome" class="form-control">
-
-                            </div>
+                                <input id="fname" name="name" type="text" placeholder="Insira seu primeiro nome" class="form-control" required>
+                                    </div>
+                                 </div>
+                                <div class="form-group">
+                            <div class="col-md-10 col-md-offset-1">
+                                <input id="lname" name="name" type="text" placeholder="Insira seu último nome" class="form-control" required>
+                                    </div>
+                                 </div>
+                                <div class="form-group">
+                            <div class="col-md-10 col-md-offset-1">
+                                <input id="email" name="email" type="email" placeholder="Insira seu E-mail" class="form-control" required>
+                                    </div>
+                                 </div>
+                                <div class="form-group">
+                            <div class="col-md-10 col-md-offset-1">
+                                <input id="phone" name="phone" type="text" placeholder="Insira seu telefone" class="form-control" required>
+                                    </div>
+                                 </div>
+                                <div class="form-group">
+                            <div class="col-md-10 col-md-offset-1">
+                                <textarea id="message" name="message" type="text" placeholder="Mande uma mensagem e retornaremos assim que possível!" class="form-control" rows="7" required></textarea>
+                                    </div>
+                                 </div>
+                                 <div class="form-group">
+                                    <div class="col-md-12 text-center">
+                                        <button type="submit" class="formbutton">Enviar</button>
+                                    </div>
+                                 </div>
+                            </fieldset>
                         </form>
+                    </div>
+                </div>
+                <!-- fim formulario -->
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="panel panel-default">
+                            <div class="text-center header">Onde estamos localizados</div>
+                            <h4>Endereço:</h4>
+                            <div>Avenida Brasil, 123 <br> Centro, São Paulo-SP CEP: 12345-000
+                                <hr>
+                            </div>
+                            <div class="map">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3659.277507172749!2d-47.45141555961633!3d-23.48651197893936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c58a9f61b55945%3A0x4ead928c70b1e690!2sEscola%20e%20Faculdade%20de%20Tecnologia%20SENAI%20Gaspar%20Ricardo%20J%C3%BAnior!5e0!3m2!1spt-BR!2sbr!4v1684972091202!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
+
+                        </div>
 
                     </div>
 
                 </div>
-
             </div>
-
         </div>
-
      </div>
-
-
     <!-- Início Footer -->
     <footer class="rodape">
         <div class="container">
