--- a/contato.html
+++ b/contato.html
@@ -38,6 +38,7 @@
                 </section>
                 <!-- fim tag section com texto de contato -->
                 <!-- inicio formulario -->
+                <!-- inicio maps -->
                 <div class="col-md-6">
                     <div class="well well-sm">
                         <form class="form-horizontal" method="post" action="">
@@ -89,15 +90,23 @@
                             <div class="map">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3659.277507172749!2d-47.45141555961633!3d-23.48651197893936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c58a9f61b55945%3A0x4ead928c70b1e690!2sEscola%20e%20Faculdade%20de%20Tecnologia%20SENAI%20Gaspar%20Ricardo%20J%C3%BAnior!5e0!3m2!1spt-BR!2sbr!4v1684972091202!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
-
                         </div>
-
                     </div>
-
                 </div>
+                <!-- fim maps -->
             </div>
         </div>
      </div>
+     <!-- fim form contato -->
+     <!-- inicio whatsApp -->
+     <div class="whatsapp">
+        <div class="container-grid logo-whats">
+            <a target="_blank" href="https://wa.link/e1cstd"><img src="./whats.png" class="pulando" alt="Contato WhatsApp"></a>
+
+        </div>
+
+     </div>
+     <!-- fim whatsApp -->
     <!-- Início Footer -->
     <footer class="rodape">
         <div class="container">
