update prj placeclothes rev 16 31/05/2023

--- a/contato.html
+++ b/contato.html
@@ -31,19 +31,19 @@
      <div class="contato">
         <div class="container">
             <div class="row">
-                <!-- inicio da tag section com texto de contato -->
+                
+                <!-- inicio formulario -->
+                <div class="col-md-6">
+                    <!-- inicio da tag section com texto de contato -->
                 <section class="col-12">
                     <h2>Entre em contato conosco! </h2>
                     <p>Para dúvidas, ou demais feedbacks entre em contato conosco! </p>
                 </section>
                 <!-- fim tag section com texto de contato -->
-                <!-- inicio formulario -->
-                <!-- inicio maps -->
-                <div class="col-md-6">
-                    <div class="well well-sm">
+                    <div class="form_main">
                         <form class="form-horizontal" method="post" action="">
                             <fieldset>
-                                <legend class="text-left header">Preencha suas informações:</legend>
+                                <h4><legend class="text-left header">Preencha suas informações:</legend></h4>
                                 <div class="form-group">
                             <div class="col-md-10 col-md-offset-1">
                                 <input id="fname" name="name" type="text" placeholder="Insira seu primeiro nome" class="form-control" required>
@@ -79,10 +79,12 @@
                     </div>
                 </div>
                 <!-- fim formulario -->
+                <!-- inicio maps -->
                 <div class="col-md-6">
                     <div class="row">
+                        <section id="text-local" class="text-center header"></section>
                         <div class="panel panel-default">
-                            <div class="text-center header">Onde estamos localizados</div>
+                            <h2 class="text-center header">Onde estamos localizados</h2>
                             <h4>Endereço:</h4>
                             <div>Avenida Brasil, 123 <br> Centro, São Paulo-SP CEP: 12345-000
                                 <hr>
