update prj placeclothes rev 17 02/06/2023

--- a/streaming.html
+++ b/streaming.html
@@ -245,7 +245,7 @@
                 <!-- Início Logo -->
                 <div class="col-md-4">
                     <figure>
-                        <img src="./img/logo rodape 1.avif" alt="logo_rodape">
+                        <img id="img-logo" src="./img/logo rodape 1.avif" alt="logo_rodape">
                     </figure>
                 </div>
                 <!-- Fim logo -->
