--- a/contato.html
+++ b/contato.html
@@ -103,7 +103,7 @@
      <!-- inicio whatsApp -->
      <div class="whatsapp">
         <div class="container-grid logo-whats">
-            <a target="_blank" href="https://wa.link/e1cstd"><img src="./whats.png" class="pulando" alt="Contato WhatsApp"></a>
+            <a target="_blank" href="https://wa.link/e1cstd"><img src="./whats.png" class="logo-whats" alt="Contato WhatsApp"></a>
 
         </div>
 
@@ -116,7 +116,7 @@
                 <!-- Início Logo -->
                 <div class="col-md-4">
                     <figure>
-                        <img src="./img/logo rodape 1.avif" alt="logo_rodape">
+                        <img id="img-logo" src="./img/logo rodape 1.avif" alt="logo_rodape">
                     </figure>
                 </div>
                 <!-- Fim logo -->
