update prj placeclothes rev 18 05/06/2023

--- a/index.html
+++ b/index.html
@@ -255,6 +255,13 @@
         </div>
     </div>
     <!-- fim galeria -->
+   <!-- inicio whatsApp -->
+    <div class="whatsapp">
+        <div class="container-grid logo-whats">
+            <a target="_blank" href="https://wa.link/e1cstd"><img src="./whats.png" class="logo-whats" alt="Contato WhatsApp"></a>
+        </div>
+     </div>
+     <!-- fim whatsApp -->
     <!-- Início Footer -->
     <footer class="rodape">
         <div class="container">
