update prj placeclothes rev.21 > 14/06/2023

--- a/produtos.html
+++ b/produtos.html
@@ -34,7 +34,7 @@
             <!-- inicio cards produtos 1 -->
             <div class="col-lg-4 col-md-12 md-4">
                 <div class="card">
-                    <div class="bd-image hover-overlay ripple" data-mdb-ripple-color="ligth">
+                    <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="ligth">
                         <img src="img/cards/card1.webp" class="img-fluid" alt="">
                         <a href="#">
                             <div class="mask" style="background-color:rgba(251, 251, 251, 0.15) ;"></div>
@@ -53,7 +53,7 @@
             <!-- inicio cards produtos 2 -->
             <div class="col-lg-4 col-md-12 md-4">
                 <div class="card">
-                    <div class="bd-image hover-overlay ripple" data-mdb-ripple-color="ligth">
+                    <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="ligth">
                         <img src="img/cards/card2.jpg" class="img-fluid" alt="">
                         <a href="#">
                             <div class="mask" style="background-color:rgba(251, 251, 251, 0.15) ;"></div>
@@ -72,7 +72,7 @@
             <!-- inicio cards produtos 3 -->
             <div class="col-lg-4 col-md-12 md-4">
                 <div class="card">
-                    <div class="bd-image hover-overlay ripple" data-mdb-ripple-color="ligth">
+                    <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="ligth">
                         <img src="img/cards/card3.webp" class="img-fluid" alt="">
                         <a href="#">
                             <div class="mask" style="background-color:rgba(251, 251, 251, 0.15) ;"></div>
@@ -91,7 +91,7 @@
             <!-- inicio cards produtos 4 -->
             <div class="col-lg-4 col-md-12 md-4">
                 <div class="card">
-                    <div class="bd-image hover-overlay ripple" data-mdb-ripple-color="ligth">
+                    <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="ligth">
                         <img src="img/cards/card4.jpg" class="img-fluid" alt="">
                         <a href="#">
                             <div class="mask" style="background-color:rgba(251, 251, 251, 0.15) ;"></div>
@@ -110,7 +110,7 @@
             <!-- inicio cards produtos 5 -->
             <div class="col-lg-4 col-md-12 md-4">
                 <div class="card">
-                    <div class="bd-image hover-overlay ripple" data-mdb-ripple-color="ligth">
+                    <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="ligth">
                         <img src="img/cards/card5.jpg" class="img-fluid" alt="">
                         <a href="#">
                             <div class="mask" style="background-color:rgba(251, 251, 251, 0.15) ;"></div>
@@ -129,7 +129,7 @@
             <!-- inicio cards produtos 6 -->
             <div class="col-lg-4 col-md-12 md-4">
                 <div class="card">
-                    <div class="bd-image hover-overlay ripple" data-mdb-ripple-color="ligth">
+                    <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="ligth">
                         <img src="img/cards/card6.webp" class="img-fluid" alt="">
                         <a href="#">
                             <div class="mask" style="background-color:rgba(251, 251, 251, 0.15) ;"></div>
@@ -148,7 +148,7 @@
             <!-- inicio cards produtos 7 -->
             <div class="col-lg-4 col-md-12 md-4">
                 <div class="card">
-                    <div class="bd-image hover-overlay ripple" data-mdb-ripple-color="ligth">
+                    <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="ligth">
                         <img src="img/cards/card7.webp" class="img-fluid" alt="">
                         <a href="#">
                             <div class="mask" style="background-color:rgba(251, 251, 251, 0.15) ;"></div>
@@ -167,7 +167,7 @@
             <!-- inicio cards produtos 8 -->
             <div class="col-lg-4 col-md-12 md-4">
                 <div class="card">
-                    <div class="bd-image hover-overlay ripple" data-mdb-ripple-color="ligth">
+                    <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="ligth">
                         <img src="img/cards/card8.jpg" class="img-fluid" alt="">
                         <a href="#">
                             <div class="mask" style="background-color:rgba(251, 251, 251, 0.15) ;"></div>
@@ -186,7 +186,7 @@
             <!-- inicio cards produtos 9 -->
             <div class="col-lg-4 col-md-12 md-4">
                 <div class="card">
-                    <div class="bd-image hover-overlay ripple" data-mdb-ripple-color="ligth">
+                    <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="ligth">
                         <img src="img/cards/card9.jpg" class="img-fluid" alt="">
                         <a href="#">
                             <div class="mask" style="background-color:rgba(251, 251, 251, 0.15) ;"></div>
